<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="current_level">current level：</string>
    <string name="You_go_first">You go first</string>
    <string name="Androids_turn">Androids_turn</string>
    <string name="your_turn">It is your turn (X).</string>
    <string name="tie">It is a tie!</string>
    <string name="You_won">You won!</string>
    <string name="Android_won">Android won!</string>
    <string name="Your_win_time">your win:</string>
    <string name="Android_win_time">android win:</string>
    <string name="tie_time">tie:</string>
    <string name="Easy">Easy</string>
    <string name="Hard">Hard</string>
    <string name="Expert">Expert</string>
    <string name="Start_a_New_Game">Start a New Game</string>
    <string name="backMusic">Back Music</string>
    <string name="stopMusic">Stop Music</string>
    <string name="exit">exit</string>
    <string name="clear_and_restart">Clear record and restart</string>


</resources>